--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -5,7 +5,7 @@
 # In short, if you change it here, PLEASE also change it in setup.py.
 #
 # setup.py install_requires
-aiohttp==3.7
+aiohttp
 aioredis
 click >= 7.0
 cloudpickle
@@ -20,7 +20,7 @@ numpy >= 1.16
 opencensus
 prometheus_client >= 0.7.1
 protobuf >= 3.8.0
-py-spy >= 0.2.0
+#py-spy >= 0.2.0
 pyyaml
 redis >= 3.5.0
 requests
@@ -31,9 +31,9 @@ dm_tree
 flask
 gym[atari]
 lz4
-opencv-python-headless==4.3.0.36
-pandas==1.0.5
-scipy==1.4.1
+opencv-python-headless
+pandas
+scipy
 tabulate
 tensorboardX
 uvicorn
@@ -44,7 +44,7 @@ starlette
 # Requirements for running tests
 blist; platform_system != "Windows"
 boto3
-cython==0.29.0
+cython
 dataclasses; python_version < '3.7'
 dask[complete]
 feather-format
@@ -57,18 +57,18 @@ mypy
 networkx
 numba
 # higher version of llvmlite breaks windows
-llvmlite==0.34.0
+llvmlite==0.34.0; platform_system == "Windows"
+llvmlite; platform_system != "Windows"
 openpyxl
 pexpect
 Pillow; platform_system != "Windows"
 pygments
-pytest==5.4.3
+pytest
 pytest-asyncio
 pytest-rerunfailures
 pytest-sugar
 pytest-timeout
-scikit-learn==0.22.2
-tensorflow
+scikit-learn
 testfixtures
 werkzeug
 xlrd
