--- a/python/ray/autoscaler/kubernetes/operator_configs/example_cluster.yaml
+++ b/python/ray/autoscaler/kubernetes/operator_configs/example_cluster.yaml
@@ -60,6 +60,7 @@ spec:
             requests:
               cpu: 1000m
               memory: 512Mi
+              ephemeral-storage: 1Gi
             limits:
               # The maximum memory that this pod is allowed to use. The
               # limit will be detected by ray and split to use 10% for
@@ -107,6 +108,7 @@ spec:
             requests:
               cpu: 1000m
               memory: 512Mi
+              ephemeral-storage: 1Gi
             limits:
               # The maximum memory that this pod is allowed to use. The
               # limit will be detected by ray and split to use 10% for
