Get ray on kube with NB to be a party

--- a/doc/kubernetes/job-example.yaml
+++ b/doc/kubernetes/job-example.yaml
@@ -10,7 +10,7 @@ spec:
       restartPolicy: Never
       containers:
         - name: ray
-          image: rayproject/ray:nightly
+          image: holdenk/ray-ray:nightly
           imagePullPolicy: Always
           command: [ "/bin/bash", "-c", "--" ]
           args:
